<?xml version="1.0" encoding="utf-8"?>
<!--
     SPDX-FileCopyrightText: 2025 kenway214
     SPDX-License-Identifier: Apache-2.0
-->
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.android.settingslib.widget.MainSwitchPreference
        android:key="game_bar_enable"
        android:title="@string/gb_enable_gamebar_overlay"
        android:defaultValue="false" />

    <com.android.gamebar.ExpandablePreferenceCategory
        android:key="category_overlay_features"
        android:title="@string/gb_overlay_features"
        android:dependency="game_bar_enable">

        <SwitchPreferenceCompat
            android:key="game_bar_fps_enable"
            android:title="@string/gb_fps_overlay"
            android:summary="@string/gb_show_current_fps_on_screen"
            android:defaultValue="true" />

        <ListPreference
            android:key="game_bar_fps_display_mode"
            android:title="@string/gb_fps_display_mode"
            android:summary="@string/gb_choose_what_fps_statistics_to_display"
            android:entries="@array/fps_display_mode_entries"
            android:entryValues="@array/fps_display_mode_values"
            android:defaultValue="basic" />

        <SwitchPreferenceCompat
            android:key="game_bar_frame_time_enable"
            android:title="@string/gb_frame_time"
            android:summary="@string/gb_show_frame_time_in_milliseconds"
            android:defaultValue="false" />

        <SwitchPreferenceCompat
            android:key="game_bar_temp_enable"
            android:title="@string/gb_device_temperature"
            android:summary="@string/gb_show_device_temperature"
            android:defaultValue="false" />

        <SwitchPreferenceCompat
            android:key="game_bar_cpu_usage_enable"
            android:title="@string/gb_cpu_usage"
            android:summary="@string/gb_show_current_cpu_usage_percentage"
            android:defaultValue="true" />

        <SwitchPreferenceCompat
            android:key="game_bar_cpu_clock_enable"
            android:title="@string/gb_cpu_clock_speeds"
            android:summary="@string/gb_show_current_cpu_clock_speeds_for_each_core"
            android:defaultValue="false" />

        <SwitchPreferenceCompat
            android:key="game_bar_cpu_temp_enable"
            android:title="@string/gb_cpu_temperature"
            android:summary="@string/gb_show_cpu_temperature"
            android:defaultValue="false" />

        <SwitchPreferenceCompat
            android:key="game_bar_ram_enable"
            android:title="@string/gb_ram_usage"
            android:summary="@string/gb_show_current_ram_usage_in_mb"
            android:defaultValue="false" />

        <SwitchPreferenceCompat
            android:key="game_bar_ram_speed_enable"
            android:title="@string/gb_ram_frequency"
            android:summary="@string/gb_show_current_ram_frequency_bus_in_ghz"
            android:defaultValue="false" />

        <SwitchPreferenceCompat
            android:key="game_bar_ram_temp_enable"
            android:title="@string/gb_ram_temperature"
            android:summary="@string/gb_show_current_ram_temperature"
            android:defaultValue="false" />

        <SwitchPreferenceCompat
            android:key="game_bar_gpu_usage_enable"
            android:title="@string/gb_gpu_usage"
            android:summary="@string/gb_show_gpu_usage_percentage"
            android:defaultValue="true" />

        <SwitchPreferenceCompat
            android:key="game_bar_gpu_clock_enable"
            android:title="@string/gb_gpu_clock_speed"
            android:summary="@string/gb_show_current_gpu_clock_frequency"
            android:defaultValue="false" />

        <SwitchPreferenceCompat
            android:key="game_bar_gpu_temp_enable"
            android:title="@string/gb_gpu_temperature"
            android:summary="@string/gb_show_current_gpu_temperature"
            android:defaultValue="false" />
    </com.android.gamebar.ExpandablePreferenceCategory>

    <com.android.gamebar.ExpandablePreferenceCategory
        android:key="category_fps_method"
        android:title="@string/gb_fps_measurement_method"
        android:dependency="game_bar_fps_enable">
        <ListPreference
            android:key="game_bar_fps_method"
            android:title="@string/gb_select_fps_method"
            android:summary="@string/gb_choose_between_the_new_api_method_default_and_lega"
            android:defaultValue="new"
            android:entries="@array/game_bar_fps_method_entries"
            android:entryValues="@array/game_bar_fps_method_values" />
    </com.android.gamebar.ExpandablePreferenceCategory>

    <com.android.gamebar.ExpandablePreferenceCategory
        android:key="category_customization"
        android:title="@string/gb_customization"
        android:dependency="game_bar_enable">

        <com.android.gamebar.utils.PartsCustomSeekBarPreference
            android:key="game_bar_text_size"
            android:title="@string/gb_text_size"
            android:summary="@string/gb_adjust_the_size_of_overlay_text"
            android:defaultValue="12"
            android:max="50"
            android:min="5"
            settings:units="" />
        <com.android.gamebar.utils.PartsCustomSeekBarPreference
            android:key="game_bar_background_alpha"
            android:title="@string/gb_background_transparency"
            android:summary="@string/gb_adjust_the_transparency_of_the_background"
            android:defaultValue="95"
            android:max="255"
            android:min="0"
            settings:units="" />

        <com.android.gamebar.colorpicker.ColorPreferenceCompat
            android:key="game_bar_background_color"
            android:title="@string/gb_overlay_background_color"
            android:summary="@string/gb_color_for_the_overlay_background"
            android:defaultValue="0xFF000000"
            app:gamebar_dialogType="custom"
            app:gamebar_showAlphaSlider="true"
            app:gamebar_colorShape="circle"
            app:gamebar_showColorShades="true"
            app:gamebar_allowPresets="true"
            app:gamebar_allowCustom="true"
            app:gamebar_colorPresets="@array/fps_overlay_color_int_values" />

        <com.android.gamebar.utils.PartsCustomSeekBarPreference
            android:key="game_bar_corner_radius"
            android:title="@string/gb_overlay_corner_radius"
            android:summary="@string/gb_adjust_how_rounded_the_overlay_corners_should_be"
            android:defaultValue="100"
            android:max="100"
            android:min="0"
            settings:units="" />
        <com.android.gamebar.utils.PartsCustomSeekBarPreference
            android:key="game_bar_padding"
            android:title="@string/gb_overlay_padding"
            android:summary="@string/gb_adjust_the_space_around_the_stats"
            android:defaultValue="4"
            android:max="64"
            android:min="0"
            settings:units="" />

        <com.android.gamebar.utils.PartsCustomSeekBarPreference
            android:key="game_bar_item_spacing"
            android:title="@string/gb_item_spacing"
            android:summary="@string/gb_adjust_spacing_between_overlay_lines"
            android:defaultValue="8"
            android:max="50"
            android:min="0"
            settings:units="" />

        <ListPreference
            android:key="game_bar_update_interval"
            android:title="@string/gb_update_interval"
            android:summary="@string/gb_set_how_often_the_overlay_values_update"
            android:defaultValue="1000"
            android:entries="@array/fps_overlay_update_interval_entries"
            android:entryValues="@array/fps_overlay_update_interval_values" />

        <com.android.gamebar.colorpicker.ColorPreferenceCompat
            android:key="game_bar_title_color"
            android:title="@string/gb_stat_title_color"
            android:summary="@string/gb_color_for_fps_temp_cpu_etc_text"
            android:defaultValue="@color/gamebar_default_title_color"
            app:gamebar_dialogType="custom"
            app:gamebar_showAlphaSlider="false"
            app:gamebar_colorShape="circle"
            app:gamebar_showColorShades="true"
            app:gamebar_allowPresets="true"
            app:gamebar_allowCustom="true"
            app:gamebar_colorPresets="@array/fps_overlay_color_int_values" />

        <com.android.gamebar.colorpicker.ColorPreferenceCompat
            android:key="game_bar_value_color"
            android:title="@string/gb_stat_value_color"
            android:summary="@string/gb_color_for_numeric_stats_e_g_29_32_0_c"
            android:defaultValue="@color/gamebar_default_value_color"
            app:gamebar_dialogType="custom"
            app:gamebar_showAlphaSlider="false"
            app:gamebar_colorShape="circle"
            app:gamebar_showColorShades="true"
            app:gamebar_allowPresets="true"
            app:gamebar_allowCustom="true"
            app:gamebar_colorPresets="@array/fps_overlay_color_int_values" />

        <Preference
            android:key="game_bar_font_selector"
            android:title="@string/gb_overlay_font_style"
            android:summary="@string/gb_choose_custom_font_for_overlay_text" />

        <ListPreference
            android:key="game_bar_position"
            android:title="@string/gb_overlay_position"
            android:summary="@string/gb_select_the_position_of_the_overlay_on_screen"
            android:defaultValue="draggable"
            android:entries="@array/fps_overlay_position_entries"
            android:entryValues="@array/fps_overlay_position_values" />

        <ListPreference
            android:key="game_bar_format"
            android:title="@string/gb_overlay_format"
            android:summary="@string/gb_choose_between_full_or_minimal_display"
            android:defaultValue="full"
            android:entries="@array/game_bar_format_entries"
            android:entryValues="@array/game_bar_format_values" />
    </com.android.gamebar.ExpandablePreferenceCategory>

    <com.android.gamebar.ExpandablePreferenceCategory
        android:key="category_split_config"
        android:title="@string/gb_split_config"
        android:dependency="game_bar_enable">

        <ListPreference
            android:key="game_bar_split_mode"
            android:title="@string/gb_split_mode"
            android:summary="@string/gb_choose_side_by_side_or_stacked_arrangement"
            android:defaultValue="side_by_side"
            android:entries="@array/game_bar_split_mode_entries"
            android:entryValues="@array/game_bar_split_mode_values" />
    </com.android.gamebar.ExpandablePreferenceCategory>

    <com.android.gamebar.ExpandablePreferenceCategory
        android:key="category_gesture_controls"
        android:title="@string/gb_overlay_gesture_controls"
        android:dependency="game_bar_enable">

        <SwitchPreferenceCompat
            android:key="game_bar_single_tap_enable"
            android:title="@string/gb_enable_single_tap"
            android:summary="@string/gb_tap_once_to_perform_an_action"
            android:defaultValue="true" />

        <ListPreference
            android:key="game_bar_single_tap_function"
            android:title="@string/gb_single_tap_function"
            android:summary="@string/gb_choose_what_happens_on_single_tap"
            android:entries="@array/gesture_function_entries"
            android:entryValues="@array/gesture_function_values"
            android:defaultValue="toggle_format" />

        <SwitchPreferenceCompat
            android:key="game_bar_doubletap_enable"
            android:title="@string/gb_enable_double_tap"
            android:summary="@string/gb_double_tap_to_perform_an_action"
            android:defaultValue="true" />

        <ListPreference
            android:key="game_bar_doubletap_function"
            android:title="@string/gb_double_tap_function"
            android:summary="@string/gb_choose_what_happens_on_double_tap"
            android:entries="@array/gesture_function_entries"
            android:entryValues="@array/gesture_function_values"
            android:defaultValue="capture_logs" />

        <SwitchPreferenceCompat
            android:key="game_bar_longpress_enable"
            android:title="@string/gb_enable_long_press"
            android:summary="@string/gb_long_press_to_perform_an_action"
            android:defaultValue="true" />

        <ListPreference
            android:key="game_bar_longpress_function"
            android:title="@string/gb_long_press_function"
            android:summary="@string/gb_choose_what_happens_on_long_press"
            android:entries="@array/gesture_function_entries"
            android:entryValues="@array/gesture_function_values"
            android:defaultValue="load_preset" />

        <ListPreference
            android:key="game_bar_longpress_timeout"
            android:title="@string/gb_long_press_duration"
            android:summary="@string/gb_set_the_duration_required_to_trigger_long_press"
            android:defaultValue="500"
            android:entries="@array/game_bar_longpress_entries"
            android:entryValues="@array/game_bar_longpress_values" />
    </com.android.gamebar.ExpandablePreferenceCategory>

    <com.android.gamebar.ExpandablePreferenceCategory
        android:key="category_per_app"
        android:title="@string/gb_per_app_gamebar">

        <SwitchPreferenceCompat
            android:key="game_bar_auto_enable"
            android:title="@string/gb_auto_enable_gamebar_for_selected_apps"
            android:summary="@string/gb_if_turned_on_selected_apps_will_auto_enable_gameba"
            android:defaultValue="false" />

        <Preference
            android:key="game_bar_per_app_config"
            android:title="@string/gb_configure_apps"
            android:summary="@string/gb_choose_which_apps_will_auto_enable_gamebar" />
    </com.android.gamebar.ExpandablePreferenceCategory>

    <com.android.gamebar.ExpandablePreferenceCategory
        android:key="category_presets"
        android:title="@string/preset_category_title">

        <Preference
            android:key="preset_save_current"
            android:title="@string/preset_save_current"
            android:summary="@string/preset_save_current_summary" />

        <Preference
            android:key="preset_import"
            android:title="@string/preset_import"
            android:summary="@string/preset_import_summary" />

        <Preference
            android:key="preset_manage"
            android:title="@string/preset_saved_presets"
            android:summary="@string/gb_view_and_manage_your_saved_presets" />

        <Preference
            android:key="preset_reset_default"
            android:title="@string/preset_reset_default"
            android:summary="@string/preset_reset_default_summary" />
    </com.android.gamebar.ExpandablePreferenceCategory>

</PreferenceScreen>
